2.2.4/_sources/gallery/axisartist/simple_axisline3.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_axisartist_simple_axisline3.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_axisartist_simple_axisline3.py:


================
Simple Axisline3
================





.. image:: /gallery/axisartist/images/sphx_glr_simple_axisline3_001.png
    :class: sphx-glr-single-img





.. code-block:: python

    import matplotlib.pyplot as plt
    from mpl_toolkits.axisartist.axislines import Subplot

    fig = plt.figure(1, (3, 3))

    ax = Subplot(fig, 111)
    fig.add_subplot(ax)

    ax.axis["right"].set_visible(False)
    ax.axis["top"].set_visible(False)

    plt.show()


.. _sphx_glr_download_gallery_axisartist_simple_axisline3.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: simple_axisline3.py <simple_axisline3.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: simple_axisline3.ipynb <simple_axisline3.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
